# Scaler_Hackathon

./: .env.example  .gitignore  00_START_HERE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FILE_GUIDE.md  HACKATHON_WORKFLOW.md  QUICK_START.md  README 2.md  README.md  SUMMARY.md  baseline_results.json  client.py  config.yaml  fix_readme.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  start.py
agent/: baseline_agent.py
app/: __init__.py  config.py  executor.py  grader.py  main.py  schemas.py  session.py
app/agent/: __init__.py  baseline_agent.py
app/env/: __init__.py  environment 2.py  environment.py  grader.py  tasks.py
app/tasks/: easy.json  hard.json  loader.py  medium.json
app/utils/: __init__.py  llm_executor.py
public/: index.html  script.js  styles.css
scorer/: reward_model.py
scripts/: run_baseline_evaluation.py  validate_setup.py
server/: Dockerfile  app.py  environment.py
tests/: __init__.py  test_api.py  test_env.py  test_grader.py
