[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptgym"
version = "1.0.0"
description = "Multi-difficulty prompt engineering environment for optimizing LLM prompts"
authors = [
    {name = "PromptGym Team"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn==0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "openenv-core>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/promptgym/promptgym"
Repository = "https://github.com/promptgym/promptgym.git"

[project.scripts]
server = "server.app:main"
